--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-        <title>My Home page</title>
+        <title>{{title}}</title>
 
         <!-- Google Fonts-->
         <link href="https://fonts.googleapis.com/css?family=Exo:100,200|Quattrocento+Sans" rel="stylesheet">
@@ -50,11 +50,10 @@
       
             <nav class="nav-menu">
               <ul>
-                  <li><a href="about.html"><i class="bx bx-user"></i> <span>About</span></a></li>
-                  <li><a href="resume.html"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-                  <li><a href="portfolio.html"><i class="bx bx-book-content"></i> Portfolio</a></li>
-                  <li><a href="contact.html"><i class="bx bx-envelope"></i> Contact</a></li>
-              </ul>       
+                  <li><a href="blog_post_1.html"><i class="bx bx-user"></i> <span>Post One</span></a></li>
+                  <li><a href="blog_post_2.html"><i class="bx bx-file-blank"></i> <span>Post Two</span></a></li>
+                  <li><a href="blog_post_3.html"><i class="bx bx-book-content"></i> Post Three</a></li>
+                </ul>       
               
             </nav><!-- .nav-menu -->
             <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
@@ -64,45 +63,7 @@
 
     <!-- ################ ENTER PLACEHOLDER CONTENT HERE ##################-->
 
-    <body>
-    <!-- ======= Mobile nav toggle button ======= -->
-  <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
-   <!-- ======= Header ======= -->
-   <header id="header">
-    <div class="d-flex flex-column">
-
-      <div class="profile">
-        <img src="assets/img/7894dfbb-228b-4b85-a553-3d86a3a5ca3c.JPG" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Olushola Babatuyi</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://github.com/obabatuyi19" class="github"><i class="bx bxl-github"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://www.linkedin.com/in/olushola-babatuyi-mba-25361451/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        </div>
-      </div>
-
-      <nav class="nav-menu">
-        <ul>
-            <li><a href="about.html"><i class="bx bx-user"></i> <span>About</span></a></li>
-            <li><a href="resume.html"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-            <li><a href="portfolio.html"><i class="bx bx-book-content"></i> Portfolio</a></li>
-            <li><a href="contact.html"><i class="bx bx-envelope"></i> Contact</a></li>
-        </ul>       
-        
-      </nav><!-- .nav-menu -->
-      <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
-    </div>
-  </header><!-- End Header -->
-
-  
-
-</body>
-
+    {{content}}
 
     
 
